# rustPaperScissors

./: Cargo.toml
src/: main.rs
