[package]
name = "rock_paper_scissors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["std_rng"] }
strum = "0.24.0"
strum_macros = "0.24.0"
